--- a/src/resources/minesweeper.css
+++ b/src/resources/minesweeper.css
@@ -16,19 +16,27 @@ div.buttons-container {
 }
 button.mine-button {
     width: 80px;
-    height: 25px;
+    height: 20px;
     border-style: outset;
     border-color: aliceblue;
+    line-height: normal;
 }
 button.mine-button:hover{
     border-style: inset;
 }
-div.mine-container{
+div.info-container{
     position: absolute;
     display: block;
     
     left: 50%;
-    top: 330px;   
+    top: 80px;   
+}
+div.minesweeper-container{
+    position: absolute;
+    display: block;
+    
+    left: 50%;
+    top: 100px;   
 }
 div.mine-grid {
     display: grid;
