--- a/src/main/webapp/styles/minesweeper.css
+++ b/src/main/webapp/styles/minesweeper.css
@@ -13,6 +13,10 @@ div.main {
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 div.main > div.wrapper {
